--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pontoscc-ui",
   "version": "0.1.0",
   "description": "Pontos.cc UI component library",
-  "homepage": "http://pontos-cc.github.io/pontocc-ui",
+  "homepage": "https://pontos-cc.github.io/pontoscc-ui/",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
