--- a/package.json
+++ b/package.json
@@ -92,5 +92,14 @@
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
     "vite-plugin-dts": "^3.9.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pontos-cc/pontoscc-ui.git"
+  },
+  "author": "Pontos.CC",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/pontos-cc/pontoscc-ui/issues"
   }
 }
